数据库分离，查询优化
